syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package productpb;

service ProductAPI {
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Set(SetRequest) returns (SetResponse) {}
    rpc Update(UpdateRequest) returns (google.protobuf.Empty) {}
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {}
	rpc IsExists(IsExistsRequest) returns (IsExistsResponse) {}
}

message Product {
	string UUID = 1;
	string name = 2;
	uint64 price = 3;
	repeated string imageURLs = 4;
	google.protobuf.Timestamp createdAt = 5;
	google.protobuf.Timestamp updatedAt = 6;
	google.protobuf.Timestamp deletedAt = 7;
}

message GetRequest {
    string UUID = 1;
}

message GetResponse {
    Product product = 1;
}

message SetRequest {
	Product product = 1;
}

message SetResponse {
    string UUID = 1;
}

message UpdateRequest {
	Product product = 1;
}

message DeleteRequest {
    string UUID = 1;
}

message IsExistsRequest {
	string UUID = 1;
}

message IsExistsResponse {
	bool isExists = 1;
}
